--- a/templates/contact.html
+++ b/templates/contact.html
@@ -24,7 +24,7 @@
     </form>
 
     <div id="confirmation-message" class="confirmation-message">
-      Formulaire envoyé !
+      Message envoyé !
     </div>
   </div>
 
