--- a/templates/commits.html
+++ b/templates/commits.html
@@ -1,40 +1,38 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8" />
-  <title>Commits par minute</title>
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-</head>
-<body>
-  <h2 style="text-align:center;">Répartition des commits par minute</h2>
-  <div id="chart_div" style="width: 900px; height: 500px; margin: auto;"></div>
-
-  <script>
-    google.charts.load("current", { packages: ["corechart"] });
-    google.charts.setOnLoadCallback(drawChart);
-
-    function drawChart() {
-      fetch('/api/commits-data/')
-        .then(response => response.json())
-        .then(data => {
-          const chartData = [['Minute', 'Nombre de commits']];
-          for (let minute in data) {
-            chartData.push([minute + " min", data[minute]]);
-          }
-
-          const dataTable = google.visualization.arrayToDataTable(chartData);
-
-          const options = {
-            title: 'Commits par minute',
-            hAxis: { title: 'Minute de la journée (0-59)' },
-            vAxis: { title: 'Nombre de commits' },
-            legend: 'none'
-          };
-
-          const chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
-          chart.draw(dataTable, options);
+  <head>
+    <meta charset="UTF-8" />
+    <title>Histogramme des Commits</title>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('current', {packages: ['corechart']});
+      google.charts.setOnLoadCallback(drawChart);
+      
+      function drawChart() {
+        // Les données sont injectées depuis Flask dans une variable JavaScript
+        var commitData = {{ data|tojson }};
+        
+        var dataTable = new google.visualization.DataTable();
+        dataTable.addColumn('number', 'Minute');
+        dataTable.addColumn('number', 'Nombre de Commits');
+        
+        commitData.forEach(function(row) {
+          dataTable.addRow([row[0], row[1]]);
         });
-    }
-  </script>
-</body>
+        
+        var options = {
+          title: 'Nombre de Commits par Minute',
+          hAxis: { title: 'Minute' },
+          vAxis: { title: 'Commits' },
+          legend: 'none'
+        };
+        
+        var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
+        chart.draw(dataTable, options);
+      }
+    </script>
+  </head>
+  <body>
+    <h2>Histogramme des Commits</h2>
+    <div id="chart_div" style="width: 900px; height: 500px;"></div>
+  </body>
 </html>
