--- a/templates/commits.html
+++ b/templates/commits.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <title>Analyse des Commits GitHub</title>
+    <title>Commits GitHub</title>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <style>
       body {
