--- a/templates/commits.html
+++ b/templates/commits.html
@@ -54,9 +54,7 @@
       <h1>Analyse des Commits GitHub (par minute)</h1>
 
       <p class="description">
-        Ce graphique représente le nombre de commits réalisés sur le projet
-        <strong>OpenRSI/5MCSI_Metriques</strong>, répartis selon les minutes de l'heure (de 00 à 59).
-        Cette visualisation permet d’observer les pics d'activité des contributeurs minute par minute.
+       Ce graphique affiche le nombre de commits sur mon repository actuel.
       </p>
 
       <div id="chart_div"></div>
